@@ -130,6 +130,8 @@ Changes:
 - Added French to addon (thanks to dekani from xbmc.org forum)
 - Replace makemkv 1.5.8 with version 1.6.0 (32 and 64 bits)
 - Change setup.sh for makemkv 1.6.0
+- Added directorys /dvdrip/portable/ip and /dvdrip/portable/psp
+- Added dvd-iphone.sh to svn
 
 Fixes:
 
